--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
 		"ip": "^1.1.5",
 		"mini-css-extract-plugin": "^2.6.0",
 		"path": "^0.12.7",
+		"pixi.js": "^5.2.2",
 		"portfinder-sync": "^0.0.2",
+		"sass": "^1.49.9",
+		"sass-loader": "^12.6.0",
+		"scss-loader": "^0.0.1",
 		"webpack-merge": "^5.8.0"
 	}
 }
